# PS1-Reverb

./: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/PS1-Reverb/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/source/IR/: IRChurch.aiff  IRDome.aiff  IRHall.aiff  IRStudio.aiff
test/source/: AudioProcessorTest.cpp
